# task-managemenent-app

./: .env.example  .gitignore  README.md  docker-compose.yaml
scripts/: init_user.sql
task_management_api_testing/: add_task.bru  add_user.bru  bruno.json  get_current_user.bru  get_hello_world.bru  get_tasks.bru  login_user.bru
task_management_backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
task_management_backend/.sqlx/: query-198ba69b8a3cbdf3faa75bb1e058c1b14468b1f998ba56cd3d955960b5444b99.json  query-2670fc7b940fccf3704ecb85854f4a8a4c41b86ad3a2a58b8c5fef1635dd3b5c.json  query-384b3ad34bcd12394d518e63f544a2a2fd3890c571717ef590b7e74a73a9e03f.json  query-59792b812f18e2d4fc8aa81f1a325c645c4ec24259449155af13a7a8c2643dfc.json  query-68c7e4372a1b84766a0f6425ecffb2733c1dd02a58d4e1b6e8561dff00577573.json  query-7673698fc721b14a7241b61d1a96329fe1e0ddd120cd121cc601e13bd1b5075a.json  query-bc9f17c787f8a36966bae9a6bee74bac5ca232eb3b280c721753968c9affae66.json  query-d4bc7abfbcec7b88173fd68275376be646dae19fbd8932896d6b5f0b48da57b3.json  query-ea9e4ae329f261e22decb6aaa7a25e1db52fe3c24494b32d03f0b04ea4a35dbd.json  query-eb2170ddf9c93bcfe10c18b88e16eb98a7927a2465c55a7c2a4f95ac41905c65.json
task_management_backend/migrations/: 20240509123556_init.sql  20240511163251_add_default_statuses.sql  20240516111543_add_position_id_to_task.sql
task_management_backend/src/: main.rs
task_management_backend/src/api/: extractor.rs  mod.rs  tasks.rs  users.rs
task_management_backend/src/http/: error.rs  extractor.rs  mod.rs  tasks.rs  users.rs
(+68 files in other folders)
